<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="string_user_name">用户名</string>
    <string name="string_local_music">本地音乐</string>
    <string name="string_recent_play">最近播放</string>
    <string name="string_category">热门分类</string>
    <string name="string_collection">我的收藏</string>
    <string name="string_share">分享</string>
    <string name="string_setting">设置</string>
    <string name="string_about">关于</string>
    <string name="string_song">歌曲</string>
    <string name="string_artist">歌手</string>
    <string name="string_song_name">歌曲名字</string>
    <string name="string_singer_name">歌手名字</string>
    <string name="string_song_duration">歌曲时长</string>
    <string name="string_lrc">歌词</string>
    <string name="string_music_time">00:00</string>
    <string name="string_function_introduction">功能介绍</string>
    <string name="string_about_author">关于作者</string>
    <string name="string_version_update">版本更新</string>
    <string name="string_system_message">系统通知</string>
    <string name="string_version_own">研发中心 版权所有</string>
    <string name="string_copyright">CopyRight © 2017 All Rights Reserved</string>
    <string name="string_theme_setting">主题设置</string>
    <string name="string_clear_cache">清除缓存</string>
    <string name="string_download_driectory">下载目录</string>
    <string name="string_stream_control">流量控制</string>
</resources>
